src/warcraft/components/correct/tests/MurailleTestsCorrect.java
package warcraft.components.correct.tests;

import warcraft.components.correct.Muraille;
import warcraft.components.tests.AbstractMurailleTests;

public class MurailleTestsCorrect extends AbstractMurailleTests {

	@Override
	public void before() {
		mur=new Muraille();
	}

}
