src/warcraft/components/error/tests/MurailleTestsError.java
package warcraft.components.error.tests;

import warcraft.components.error.MurailleError;
import warcraft.components.tests.AbstractMurailleTests;

public class MurailleTestsError extends AbstractMurailleTests {

	@Override
	public void before() {
		mur=new MurailleError();
	}

}
